# mercury

./: Cargo.toml  README.md  config.example.toml
src/: config.rs  error.rs  logger.rs  main.rs
