[package]
name = "mercury"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["trace"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
